--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "^2.3.0"
+    "randomstring": "^1.1.5"
   }
 }
